--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "desktop",
+  "name": "programming3_by_ananun",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "As an example of final project Programming 3",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ananun",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   }
 }
